Comment out game links in index.html
Commented out links to other games while keeping the 'Sopas de Letras' link active.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <h1>🎮 Juegos Educativos</h1>
 
 <ul>
-  <li><a href="juegos/sumasyrestas.html">➕ Sumas y Restas</a></li>
-  <li><a href="juegos/spaceinvaders.html">🧠 Space Invvaders de Mates</a></li>
+<!-- <li><a href="juegos/sumasyrestas.html">➕ Sumas y Restas</a></li>
+  <li><a href="juegos/spaceinvaders.html">🧠 Space Invaders de Mates</a></li> -->
   <li><a href="juegos/sopadeletras.html">🔤 Sopas de Letras</a></li>
 </ul>
 
 </body>
 </html>
+
