--- a/juegos/sopadeletras.html
+++ b/juegos/sopadeletras.html
@@ -4,6 +4,44 @@
   <meta charset="UTF-8">
   <title>Juego de Matemáticas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+#sopa{
+  display:grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap:4px;
+  max-width:320px;
+  margin:20px auto;
+}
+
+.celda{
+  width:30px;
+  height:30px;
+  border:1px solid #333;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:bold;
+  cursor:pointer;
+  user-select:none;
+}
+
+.celda.seleccion{
+  background:#ffd54f;
+}
+
+.celda.encontrada{
+  background:#81c784;
+  color:#fff;
+}
+
+.encontrada-palabra{
+  text-decoration:line-through;
+  color:green;
+  font-weight:bold;
+}
+</style>
+
 </head>
 <body>
 
@@ -193,3 +231,4 @@ function marcarPalabraEncontrada(p){
 
 </body>
 </html>
+
