--- a/juegos/sopadeletras.html
+++ b/juegos/sopadeletras.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Juego de Matemáticas</title>
+  <title>Sopa de Letras</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -231,4 +231,5 @@ function marcarPalabraEncontrada(p){
 
 </body>
 </html>
+
 
