Update word bank in sopa de letras
MAS PALABRAS

--- a/juegos/sopadeletras.html
+++ b/juegos/sopadeletras.html
@@ -70,7 +70,8 @@ const bancoPalabras = [
   "ELEFANTE","FLAMENCO","PINGUINO","RINOCERONTE",
   "CAMELLO","CANGURO","HIPOPOTAMO","COCODRILO",
   "GATO","PERRO","PEZ","RATON","LEON","TIGRE",
-  "OSO","ZORRO","JIRAFA","MONO","LORO"
+  "OSO","ZORRO","JIRAFA","MONO","LORO",
+  "AMIGOS", "COLE", "COMIDA", "LIBRO"
 ];
 
 /* ===== EMPEZAR ===== */
@@ -231,5 +232,6 @@ function marcarPalabraEncontrada(p){
 
 </body>
 </html>
+
 
 
