--- a/juegos/sopadeletras.html
+++ b/juegos/sopadeletras.html
@@ -73,10 +73,11 @@ const bancoPalabras = [
   "CAMELLO","CANGURO","HIPOPOTAMO","COCODRILO",
   "GATO","PERRO","PEZ","RATON","LEON","TIGRE",
   "OSO","ZORRO","JIRAFA","MONO","LORO",
-  "AMIGOS","COLE","COMIDA","LIBRO","COCHE,
+  "AMIGOS","COLE","COMIDA","LIBRO","COCHE",
   "EMMA","ALBA","HUGO", "AGUACATE","GABI",
   "JUGAR","PATINAR","TELAS","SALTAR","ABUELOS",
-  "ROMERO","FELIZ"
+  "ROMERO","FELIZ","TRISTE","JAMON","AGUA"
+  "ARBOL","RECREO",
 ];
 
 /* ===== EMPEZAR ===== */
@@ -242,6 +243,7 @@ function marcarPalabraEncontrada(p){
 
 </body>
 </html>
+
 
 
 
