--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <h1>🎮 Juegos Educativos</h1>
 
 <ul>
-<!-- <li><a href="juegos/sumasyrestas.html">➕ Sumas y Restas</a></li>
-  <li><a href="juegos/spaceinvaders.html">🧠 Space Invaders de Mates</a></li> -->
+<li><a href="juegos/sumasyrestas.html">➕ Sumas y Restas</a></li>
+  <li><a href="juegos/spaceinvaders.html">🧠 Space Invaders de Mates</a></li>
   <li><a href="juegos/sopadeletras.html">🔤 Sopas de Letras</a></li>
+  <li><a href="juegos/sopadeletras_2.html">🔤 Sopas de Letras Niveles</a></li>
 </ul>
 
 </body>
 </html>
+
 
