--- a/juegos/spaceinvaders.html
+++ b/juegos/spaceinvaders.html
@@ -168,6 +168,7 @@ function shoot(){
   if(sndShoot) try{ sndShoot.currentTime = 0; sndShoot.play(); }catch(e){}
 }
 
+
 function update(){frame++; 
   bullets.forEach((b,i)=>{ b.y -= b.dy; if(b.y < 0) bullets.splice(i,1); });
   const now = performance.now();
@@ -209,19 +210,12 @@ function loop(){ if(gameOver) return; update(); draw(); requestAnimationFrame(lo
 canvas.addEventListener('click', (e) => {
   const rect = canvas.getBoundingClientRect();
   const x = (e.clientX - rect.left);
-  const y = (e.clientY - rect.top);
+  // Solo se mueve a la posición X del click y dispara
+ player.x += (x - player.x) * 0.3; // animación suave
+  shoot();
 
-  for (let i = 0; i < enemies.length; i++) {
-    const en = enemies[i];
-    if (x >= en.x - en.w/2 && x <= en.x + en.w/2 &&
-        y >= en.y - en.h/2 && y <= en.y + en.h/2) {
-      player.x = en.x;
-      shoot();        // dispara una vez
-      hitEnemy(i);    // aplica el efecto del impacto
-      break;
-    }
-  }
 });
+
 
 
 function end(){gameOver=true;endScore.textContent=score;overlay.style.display='flex';bgm.pause();saveHigh();}
