Refactor HTML and CSS for sum and subtraction game
Updated styles and layout for better user experience.

--- a/juegos/sumasyrestas.html
+++ b/juegos/sumasyrestas.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Juego de Sumas y Restas</title>
 <style>
-  body { font-family: 'Segoe UI', sans-serif; background:#f0f0f0; margin:0; padding:0;}
+  body { font-family: 'Segoe UI', sans-serif; background:#f0f0f0; margin:0; padding:0; }
   .contenedor-juego {
     max-width: 500px;
     margin: 30px auto;
@@ -16,20 +16,23 @@
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
     text-align: center;
   }
-  .contenedor-juego h2 { color: #2e7d32; margin-bottom: 15px; }
+  .contenedor-juego h2 { color: #2e7d32; margin-bottom: 15px; font-size: 28px; }
+  label { font-size: 20px; }
+  select, input[type="checkbox"], button { font-size: 22px; }
   .linea { display: flex; justify-content: center; flex-wrap: nowrap; margin-bottom: 10px; }
   .columna { display: flex; flex-direction: column; align-items: center; margin: 1px; }
-  .celda, input { width: 35px; height: 35px; font-size: 22px; text-align: center; border-radius: 6px; border: 1px solid #aaa; margin: 1px 0; box-sizing: border-box; }
+  .celda, input { width: 40px; height: 40px; font-size: 24px; text-align: center; border-radius: 6px; border: 1px solid #aaa; margin: 1px 0; box-sizing: border-box; }
   input { -moz-appearance: textfield; }
   input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
   .correct { background-color: #b2ffb2; } 
   .wrong { background-color: #ffb2b2; } 
   .linea-horizontal { height: 3px; background-color: #333; margin: 5px 0 10px 0; width: 100%; }
-  #contador { font-size: 18px; font-weight: bold; color: #2e7d32; margin-top: 15px; }
-  button { font-size: 16px; padding: 8px 10px; margin: 5px; border-radius: 8px; border: none; background-color: #4CAF50; color: white; cursor: pointer; transition: background 0.3s; }
+  #contador { font-size: 22px; font-weight: bold; color: #2e7d32; margin-top: 15px; }
+  button { font-size: 22px; padding: 10px 12px; margin: 5px; border-radius: 8px; border: none; background-color: #4CAF50; color: white; cursor: pointer; transition: background 0.3s; }
   button:hover { background-color: #45a049; }
   @media (max-width: 600px){
-    .celda, input { width: 30px; height: 30px; font-size: 18px; }
+    .celda, input { width: 35px; height: 35px; font-size: 20px; }
+    select, button { font-size: 20px; }
   }
 </style>
 </head>
@@ -52,7 +55,7 @@
     <option value="3">3 cifras</option>
   </select><br>
 
-  <label><input type="checkbox" id="conLlevadas"> Permitir llevadas</label><br><br>
+  <label><input type="checkbox" id="conLlevadas"> Con llevadas</label><br><br>
 
   <button id="btnComenzar">Comenzar juego</button>
   <button id="btnNueva">Probar otra</button>
